Revision history for Perl module RT::Client::REST

0.49	?
  - Support custom fields that contain '#' in their name.  Patch
    contributed by Ryan Niebur in RT#83856 -- thanks!

0.48    Wed Apr 30 2014 "Dmitri Tikhonov" <dtikhonov@yahoo.com>
  - Fixed POD bug in 0.47 -- `logger' attribute and method of
    RT::Client::REST was not documented and this caused POD
    coverage test to fail.  While at it, made it a developer-only
    test.  This way, these types of issues do not cause all
    cpantesters to fail.

0.47    Wed Apr 30 2014 "Dmitri Tikhonov" <dtikhonov@yahoo.com>
  - Support redirects on login, RT#92371.
  - Skip failing test 83-attachments.t on OpenBSD while we investigage
    why it fails.  Track this issue in RT#95223.

0.46    Sat Apr 26 2014 "Dmitri Tikhonov" <dtikhonov@yahoo.com>
  This release only fixes several tests, there are no functional changes.
  Dmitri Tikhonov <dtikhonov@yahoo.com>
   - Skip some tests on Windows and with buggy LWP::UserAgent.
  Marco Pessotto
   - Bumped version for next release (+ fixed version number in POD)

0.45
  Marco Pessotto
   - Fixed uploading preventing objects to be stringified (RT#88919)
   - Added option to get undecoded attachments (RT#90112)
   - Added test 82-stringify.t (fails with 0.44 before the RT#88919 fix)
   - Added test 83-attachments.t to illustrate and check RT#90112

0.44
  Damien Krotkine
   - Add URI in the prereqs
  Dave Lambley
   - Add support for parsing RT dates and returning a datetime object.
     (RT#73920 + RT#76658)
  Gregor Hermann (Debian Perl Group)
   - Doc improvement (RT#74191)
  Darren Duncan
     Doc improvement for timeout (RT #78133)
  richardgmcmahon@gmail.com
     Doc improvement for show method (RT #78439)
  Miquel Ruiz
     Fix for submitting non latin-1 strings to RT

0.43
  Miquel Ruiz <mruiz@cpan.org>
    - Added support for groups via new class RT::Client::REST::Group
      Tests and examples also added.
  Roman Plesll <RPLESSL@cpan.org>