@@ -1,6 +1,9 @@
 Revision history for Perl module RT::Client::REST
 
 0.49	?
+  - This module is now all covered by the Perl Artistic License:
+    GPL is gone.  This was done with permission from the original
+    author of the command-line `rt' utility, Abhijit Menon-Sen.
   - Support custom fields that contain '#' in their name.  Patch
     contributed by Ryan Niebur in RT#83856 -- thanks!
 
